@@ -9,18 +9,18 @@ import com.morago.backend.mapper.DebtorMapper;
 import com.morago.backend.repository.CallRepository;
 import com.morago.backend.repository.DebtorRepository;
 import com.morago.backend.service.user.UserService;
-import jakarta.transaction.Transactional;
+import org.springframework.transaction.annotation.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class DebtorServiceImpl implements DebtorService {
 
     private final DebtorRepository debtorRepository;
@@ -32,14 +32,14 @@ public class DebtorServiceImpl implements DebtorService {
     public void addDebt(User user, BigDecimal delta) {
         if (delta == null || delta.signum() <= 0) return;
 
-        List<Debtor> open = debtorRepository.findByUserIdAndIsPaidFalseOrderByCreatedAtAsc(user.getId());
+        var open = debtorRepository.findByUserIdAndIsPaidFalseOrderByCreatedAtAsc(user.getId());
         Debtor debtor = open.isEmpty()
                 ? Debtor.builder()
                 .user(user)
                 .owedDecimal(BigDecimal.ZERO)
                 .isPaid(false)
                 .build()
-                : open.get(0);
+                : open.getFirst();
 
         BigDecimal cur = debtor.getOwedDecimal() == null ? BigDecimal.ZERO : debtor.getOwedDecimal();
         debtor.setOwedDecimal(cur.add(delta));
@@ -50,7 +50,7 @@ public class DebtorServiceImpl implements DebtorService {
     public BigDecimal repayDebt(User user, BigDecimal payment) {
         if (payment == null || payment.signum() <= 0) return BigDecimal.ZERO;
 
-        List<Debtor> open = debtorRepository.findByUserIdAndIsPaidFalseOrderByCreatedAtAsc(user.getId());
+        var open = debtorRepository.findByUserIdAndIsPaidFalseOrderByCreatedAtAsc(user.getId());
         if (open.isEmpty()) return BigDecimal.ZERO;
 
         BigDecimal remaining = payment;
@@ -62,7 +62,6 @@ public class DebtorServiceImpl implements DebtorService {
             BigDecimal owe = d.getOwedDecimal() == null ? BigDecimal.ZERO : d.getOwedDecimal();
             if (owe.signum() <= 0) {
                 d.setPaid(true);
-                debtorRepository.save(d);
                 continue;
             }
 
@@ -71,33 +70,35 @@ public class DebtorServiceImpl implements DebtorService {
 
             d.setOwedDecimal(left);
             d.setPaid(left.signum() == 0);
-            debtorRepository.save(d);
 
             appliedTotal = appliedTotal.add(applied);
             remaining = remaining.subtract(applied);
         }
 
+        debtorRepository.saveAll(open);
         return appliedTotal;
     }
 
     @Override
     @Transactional
     public void releasePreauthByCall(String callId) {
-        Long id;
+        final long id;
         try {
-            id = Long.valueOf(callId);
+            id = Long.parseLong(callId);
         } catch (NumberFormatException e) {
+            log.debug("releasePreauthByCall: non-numeric callId={}", callId);
             return;
         }
 
         var call = callRepository.findById(id).orElse(null);
-        if (call == null || call.getCaller() == null || call.getTheme() == null) return;
+        if (call == null || call.getCaller() == null || call.getTheme() == null) {
+            log.debug("releasePreauthByCall: missing call/caller/theme for callId={}", callId);
+            return;
+        }
 
         BigDecimal perMinute = ThemePriceUtil.perMinute(call.getTheme());
-        if (perMinute.signum() <= 0) return;
 
         User client = userService.findByIdForUpdateOrThrow(call.getCaller().getId());
-
         BigDecimal toRelease = client.getReserved().min(perMinute);
         if (toRelease.signum() > 0) {
             client.setReserved(client.getReserved().subtract(toRelease));
@@ -106,6 +107,7 @@ public class DebtorServiceImpl implements DebtorService {
     }
 
     @Override
+    @Transactional
     public DebtorDto create(DebtorDto debtorDto) {
         Debtor debtor = debtorMapper.toEntity(debtorDto);
         return debtorMapper.toDto(debtorRepository.save(debtor));
@@ -122,21 +124,21 @@ public class DebtorServiceImpl implements DebtorService {
         return debtorRepository.findAll()
                 .stream()
                 .map(debtorMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Transactional
     public DebtorDto update(Long id, DebtorDto debtorDto) {
         Debtor debtor = findDebtorOrThrow(id);
-
         debtor.setAccountHolder(debtorDto.getAccountHolder());
         debtor.setNameOfBank(debtorDto.getNameOfBank());
         debtor.setPaid(debtorDto.isPaid());
-
         return debtorMapper.toDto(debtorRepository.save(debtor));
     }
 
     @Override
+    @Transactional
     public void delete(Long id) {
         Debtor debtor = findDebtorOrThrow(id);
         debtorRepository.delete(debtor);
